[gd_scene load_steps=8 format=3 uid="uid://cc0poq6hpa3yw"]

[ext_resource type="Script" uid="uid://cxgmjo2n0wt8l" path="res://src/entities/train/train.gd" id="1_fmutq"]
[ext_resource type="SpriteFrames" uid="uid://bva8b1838pfxw" path="res://src/entities/train/caboose_frames.tres" id="1_r56mm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hwjhi"]
size = Vector2(16, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u6wlt"]
size = Vector2(3, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fmutq"]
size = Vector2(1, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o6iic"]
size = Vector2(2, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s0j5y"]
size = Vector2(2, 1)

[node name="train" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_fmutq")

[node name="stop_timer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 7)
shape = SubResource("RectangleShape2D_hwjhi")

[node name="animated_sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(8, 6)
sprite_frames = ExtResource("1_r56mm")
animation = &"moving_left"

[node name="center" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 96

[node name="CollisionShape2D" type="CollisionShape2D" parent="center"]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_u6wlt")

[node name="left" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 128

[node name="left" type="CollisionShape2D" parent="left"]
position = Vector2(2.5, 6)
shape = SubResource("RectangleShape2D_fmutq")

[node name="right" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 128

[node name="right" type="CollisionShape2D" parent="right"]
position = Vector2(13.5, 6)
shape = SubResource("RectangleShape2D_fmutq")

[node name="bottom" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 128

[node name="bottom" type="CollisionShape2D" parent="bottom"]
position = Vector2(8, 11.5)
shape = SubResource("RectangleShape2D_o6iic")

[node name="top" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 128

[node name="top" type="CollisionShape2D" parent="top"]
position = Vector2(8, 2.5)
shape = SubResource("RectangleShape2D_s0j5y")

[connection signal="timeout" from="stop_timer" to="." method="_on_stop_timer_timeout"]
[connection signal="area_entered" from="center" to="." method="_on_center_area_entered"]
[connection signal="area_exited" from="center" to="." method="_on_center_area_exited"]
[connection signal="area_entered" from="left" to="." method="_on_left_area_entered"]
[connection signal="area_exited" from="left" to="." method="_on_left_area_exited"]
[connection signal="area_entered" from="right" to="." method="_on_right_area_entered"]
[connection signal="area_exited" from="right" to="." method="_on_right_area_exited"]
[connection signal="area_entered" from="bottom" to="." method="_on_bottom_area_entered"]
[connection signal="area_exited" from="bottom" to="." method="_on_bottom_area_exited"]
[connection signal="area_entered" from="top" to="." method="_on_top_area_entered"]
[connection signal="area_exited" from="top" to="." method="_on_top_area_exited"]
